[gd_scene load_steps=2 format=3 uid="uid://xq36w5vrpfwb"]

[ext_resource type="Script" path="res://Authentication/RegisterPanel/RegisterPanel.gd" id="1_ulfat"]

[node name="RegisterPanel" type="PanelContainer"]
size_flags_horizontal = 0
script = ExtResource("1_ulfat")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Register Account"
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 15
columns = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer/Grid"]
layout_mode = 2
text = "Username"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "user"

[node name="EmailLabel" type="Label" parent="VBoxContainer/Grid"]
layout_mode = 2
text = "Email"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "test@gmail.com"

[node name="PasswordLabel" type="Label" parent="VBoxContainer/Grid"]
layout_mode = 2
text = "Password"

[node name="PasswordField" type="HBoxContainer" parent="VBoxContainer/Grid"]
layout_mode = 2

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer/Grid/PasswordField"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "password"
secret = true

[node name="ShowHide" type="Button" parent="VBoxContainer/Grid/PasswordField"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Show"

[node name="ConfirmPasswordLabel" type="Label" parent="VBoxContainer/Grid"]
layout_mode = 2
text = "Confirm Password"

[node name="ConfirmPasswordField" type="LineEdit" parent="VBoxContainer/Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "password"
secret = true

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Register"

[connection signal="toggled" from="VBoxContainer/Grid/PasswordField/ShowHide" to="." method="_on_show_hide_toggled"]
[connection signal="pressed" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
